# gambit_2.2

./: .gitignore  Atlas13_TeV_GluinoGluino_1events.hepmc  Atlas13_TeV_GluinoGluino_4events.hepmc  BUILD_OPTIONS.md  CMAKE_FLAGS.md  CMakeLists.txt  HISTORY  MakeSpecBitTests  README.md  README_OSX.md  cmake_command.sh  lnlike_modifiers_plots.py  make_specbit_tests.sh  out.txt  output_error.txt  spin1_a1000_capped.yaml  submit_make.sh  test.yaml
gum/: CMakeLists.txt  FeynRules_procedure.txt  TODO  ctest.py  darkbit.py  decays.py  dependencies.txt  feynrules.py  files.py  gum  gum.py  mathematica_interface.py  mgtest.py  models.py  parse.py  particledb.py  setup.py  spectrum.py
gum/Models/DMEFT/: DMEFT.fr
gum/Models/DecayingDM/: DecayingDM.fr  DecayingDM.pip  DecayingDM_fullEx.yaml
gum/Models/FeynRules/: Leptoquark_U1.fr  SingletDM_test.fr  VectorLeptoquark.fr
gum/Models/Leptoquarks/: Leptoquarks.fr
gum/Models/MDMSM/: MDMSM.fr
gum/Models/R2_S1_Leptoquarks/: R2_S1_Leptoquarks.fr
gum/Models/S1_S3_Leptoquarks/: S1_S3_Leptoquarks.fr
gum/Models/SingletDM_test/: SingletDM_test.fr
gum/Models/U1_Leptoquark/: U1_Leptoquark.fr
gum/Models/VectorLeptoquark/: VectorLeptoquark.fr
gum/Models/VectorMediatorDiracDM/: VectorMediatorDiracDM.fr
gum/Outputs/MDMSM/ColliderBit/include/gambit/ColliderBit/models/: MDMSM.hpp
gum/Outputs/MDMSM/MadGraph5_aMC/: generate_matrix_elements.mg5  py.py
gum/Outputs/MDMSM/MadGraph5_aMC/Pythia_patched/: Makefile  README
gum/Outputs/MDMSM/MadGraph5_aMC/Pythia_patched/examples/: Makefile_MDMSM_1  main11.cc  main27.cc  main63.cc  main64.cc  main85.cc  main89mlm.cmnd  main_MDMSM_1.cc
gum/Outputs/MDMSM/MadGraph5_aMC/Pythia_patched/include/: HelAmps_MDMSM.h  Parameters_MDMSM.h  Sigma_MDMSM_ccx_xchixchig.h  Sigma_MDMSM_ddx_xchixchig.h  Sigma_MDMSM_gc_xchixchic.h  Sigma_MDMSM_gd_xchixchid.h  Sigma_MDMSM_gg_xchixchi.h  Sigma_MDMSM_gg_xchixchig.h  Sigma_MDMSM_gs_xchixchis.h  Sigma_MDMSM_gu_xchixchiu.h  Sigma_MDMSM_ssx_xchixchig.h  Sigma_MDMSM_uux_xchixchig.h
gum/Outputs/MDMSM/MadGraph5_aMC/Pythia_patched/include/Pythia8/: BeamParticle.h  History.h  Info.h  LHEF3.h  LesHouches.h  MultipartonInteractions.h  ParticleData.h  PartonLevel.h  Pythia.h  SigmaHiggs.h  SpaceShower.h  StringFragmentation.h  SusyLesHouches.h  TimeShower.h
gum/Outputs/MDMSM/MadGraph5_aMC/Pythia_patched/include/Pythia8Plugins/: EvtGen.h  GeneratorInput.h  HepMC2.h
gum/Outputs/MDMSM/MadGraph5_aMC/Pythia_patched/share/Pythia8/htmldoc/: Diffraction.html  ExternalDecays.html  ImplementNewShowers.html  LesHouchesAccord.html  MultipartonInteractions.html  ParticleData.html  ParticleDataScheme.html  ParticleDecays.html  ParticleProperties.html  ProgramMethods.html  SampleMainPrograms.html  UpdateHistory.html  UserHooks.html  Version.html  aMCatNLOMatching.html
gum/Outputs/MDMSM/MadGraph5_aMC/Pythia_patched/share/Pythia8/phpdoc/: Diffraction.php  ExternalDecays.php  ImplementNewShowers.php  LesHouchesAccord.php  MultipartonInteractions.php  ParticleData.php  ParticleDataScheme.php  ParticleDecays.php  ParticleProperties.php  ProgramMethods.php  SampleMainPrograms.php  UpdateHistory.php  UserHooks.php  Version.php  aMCatNLOMatching.php
gum/Outputs/MDMSM/MadGraph5_aMC/Pythia_patched/src/: Basics.cc  BeamParticle.cc  BeamRemnants.cc  ColourReconnection.cc  FragmentationSystems.cc  HardDiffraction.cc  HelAmps_MDMSM.cc  History.cc  Info.cc  JunctionSplitting.cc  LHEF3.cc  LesHouches.cc  Merging.cc  MergingHooks.cc  MultipartonInteractions.cc  Parameters_MDMSM.cc  ParticleData.cc  PartonLevel.cc  ProcessContainer.cc  Pythia.cc  SLHAinterface.cc  SigmaExtraDim.cc  SigmaLeftRightSym.cc  Sigma_MDMSM_ccx_xchixchig.cc  Sigma_MDMSM_ddx_xchixchig.cc  Sigma_MDMSM_gc_xchixchic.cc  Sigma_MDMSM_gd_xchixchid.cc  Sigma_MDMSM_gg_xchixchi.cc  Sigma_MDMSM_gg_xchixchig.cc  Sigma_MDMSM_gs_xchixchis.cc  Sigma_MDMSM_gu_xchixchiu.cc  Sigma_MDMSM_ssx_xchixchig.cc  Sigma_MDMSM_uux_xchixchig.cc  SpaceShower.cc  StringFragmentation.cc  SusyLesHouches.cc  SusyResonanceWidths.cc  SusyWidthFunctions.cc  TauDecays.cc  TimeShower.cc
gum/Outputs/MDMSM/MadGraph5_aMC/diagrams/: diagrams_1_gg_xchixchi.eps  diagrams_2_ccx_xchixchig.eps  diagrams_2_ddx_xchixchig.eps  diagrams_2_gc_xchixchic.eps  diagrams_2_gcx_xchixchicx.eps  diagrams_2_gd_xchixchid.eps  diagrams_2_gdx_xchixchidx.eps  diagrams_2_gg_xchixchig.eps  diagrams_2_gs_xchixchis.eps  diagrams_2_gsx_xchixchisx.eps  diagrams_2_gu_xchixchiu.eps  diagrams_2_gux_xchixchiux.eps  diagrams_2_ssx_xchixchig.eps  diagrams_2_uux_xchixchig.eps
gum/Templates/: ColliderBit_model.cpp  ColliderBit_model.hpp
gum/Tutorial/: MDMSM.fr  MDMSM.gum  MDMSM.pip  MDMSM.yaml  MDMSM_Collider.gum  MDMSM_Tute.yaml  MDMSM_Tutorial.yaml  README
gum/cmake/: contrib.cmake  patch_FeynRules.dif  patch_MadGraph.dif  patch_SARAH.dif
gum/dmeft/: CT_couplings.py  __init__.py  coupling_orders.py  couplings.py  decays.py  lorentz.py  parameters.py  particles.py  vertices.py
gum/dmeftch/: extlib1.mdl  func1.mdl  lgrng1.mdl  prtcls1.mdl  vars1.mdl
gum/gum_files/: DMEFT.gum  DecayingDM.gum  DiracDM.gum  Leptoquark_U1.gum  Leptoquarks.gum  MDMSM.gum  NMSSM.gum  R2_S1_Leptoquarks.gum  S1_R2_Leptoquarks.gum  S1_S3_Leptoquarks.gum  SSDM.gum  SingletDM.gum  THDM_II.gum  U1_Leptoquark.gum  VectorLeptoquark.gum  testMSSM.gum
gum/include/: cmake_variables.hpp  cmake_variables.hpp.in  feynrules.hpp  math_package.hpp  options.hpp  sarah.hpp
gum/mathscripts/FeynRules/: SingletDM.m
gum/mathscripts/SARAH/: Run_SingletDM.m
gum/mug_files/: test.mug
gum/scripts/: make_SPheno_decay_tables.py
gum/src/: __init__.py  backends.py  bib.py  calchep.py  cmake_variables.py  cmake_variables.py.in  collider.py  colliderbit.py  darkbit.py  decays.py  feynrules.cpp  feynrules.py  files.py  madgraph.py  math_package.cpp  mathematica.cpp  mathematica_interface.py  models.py  options.cpp  parameters.py  parse.py  particledb.py  pythia.py  sarah.cpp  sarah.py  setup.py  spectrum.py  spheno.py  ufo_to_mdl.py  vevacious.py
gum/todo/: FeynRules_procedure.txt  SARAH_procedure.txt  TODO
gum/tutorial/: README
(+3485 files in other folders)
